	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================

11/06
	* Ganbantein's delay is now 2 secs. [Skotlex]
	* Removed the time2 value of NJ_NEN since it has no use. [Skotlex]
11/05
	* Raised the chance to get an OPB from an OPB [Playtester]
	* Official NJ/GS job exp for level 51+52 [Playtester]
11/03
	* Official X.4 MVP rewards [Playtester]
	* Official NJ/GS job exp up to joblevel 50 [Playtester]
	* Remaining official X.4 drop updates [Playtester]
	- updated related item names
11/02
	* Official Gunslinger/Ninja weapon drops [Playtester]
	- updated other mob drops A-M
	- updated related item names
	* Official X.4 mob drops [Playtester]
	* Fixed Aliot's Rebirth skill [Playtester]
11/01
	* Reverted LK_Berserk HP requirement [Vicious]
10/30
	* Added some official X.4 drop rates [Playtester]
	* Corrected GS skill ranges using Aegis data. All their targetted skills
	  have a base range of 9, and Dust (Choke) has a range of 2. [Skotlex]
	* Gave Grounddrift a knockback of 3 for the fire-elemental effect (value
	  totally custom)
	* Set the inf2 to encore skills of Wand of Hermode [Skotlex]
10/29
	* Official NJ/GS exp chart for level 1-48 [Playtester]
	* Added Shinobi Sash to Shinobi drops [Playtester]
	* Fixed const.txt, thanks to flaviojs [Vicious]
	* Fixed homunculus's growth, according to Aegis [Vicious]
10/27
	* Made Thief Clothes and Ninja Suit being equippable by Ninja [Playtester]
	* More Odin/Kiel fixes [Playtester]
10/26
	* Fixed Constant's explode not working as it should [Playtester]
10/25
	* More Kiel Mob updates [Playtester]
	* Changed order of Aliza drops to prevent steal exploit [Playtester]
	* MG_STONECURSE and NPC_PETRIFYATTACK now use time1 to specify the