@@ -850,6 +850,8 @@
 500,0,0,0,600000,0
 //-- GS_FLING
 501,0,0,0,30000,0
+//-- GS_BULLSEYE
+503,500,0,0,0,0
 //-- GS_MADNESSCANCEL
 504,0,0,0,15000,0
 //-- GS_ADJUSTMENT
@@ -876,8 +878,8 @@
 519,1000,1200:1400:1600:1800:2000:2200:2400:2600:2800:3000,0,0,10000
 //-- GS_SPREADATTACK // Delay unknown (if there is one, other that aspd)
 520,1000,0,0,0,0
-//-- GS_GROUNDDRIFT // Delay unknown (if there is one, other that aspd)
-521,1000,0,0,3000:6000:9000:12000:15000:18000:21000:24000:27000:30000,10000
+//-- GS_GROUNDDRIFT
+521,2000,0,0,3000:6000:9000:12000:15000:18000:21000:24000:27000:30000,10000
 //==========================================
 
 
